# ml_ean_2024

./: pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
Cuadernos/: Copia de Grupo 4 - Proyecto 1. Relacion Minutos Ingreso.ipynb
Cuadernos/.ipynb_checkpoints/: Copia de Grupo 4 - Proyecto 1. Relacion Minutos Ingreso-checkpoint.ipynb
