[tool.poetry]
name = "proyecto1"
version = "0.1.0"
description = "Mi primer proyecto de ciencia de datos"
authors = ["Jose"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
